cmake_minimum_required(VERSION 3.26)
project(plotmax2509)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(${PROJECT_SOURCE_DIR}/q0263_ugly_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0268_missing_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0278_first_bad_version)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0283_move_zeroes)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0290_word_pattern)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0292_nim_game)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0303_range_sum_query_immutable)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0326_power_of_three)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0338_counting_bits)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0342_power_of_four)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0344_reverse_string)

