cmake_minimum_required(VERSION 3.26)
project(plotmax2509)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(${PROJECT_SOURCE_DIR}/q0263_ugly_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0268_missing_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0278_first_bad_version)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0283_move_zeroes)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0290_word_pattern)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0292_nim_game)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0303_range_sum_query_immutable)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0326_power_of_three)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0338_counting_bits)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0342_power_of_four)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0344_reverse_string)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0345_reverse_vowels_of_a_string)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0349_intersection_of_two_arrays)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0350_intersection_of_two_arrays_II)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0367_valid_perfect_square)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0374_guess_number_higher_or_lower)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0383_ransom_note)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0387_first_unique_character_in_a_string)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0389_find_the_difference)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0392_is_subsequence)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0401_binary_watch)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0404_sum_of_left_leaves)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0405_convert_a_number_to_hexadecimal)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0409_longest_palindrome)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0412_fizz_buzz)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0414_third_maximum_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0415_add_strings)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0434_number_of_segments_in_a_string)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0441_arranging_coins)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0448_find_all_numbers_disappeared_in_an_array)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0455_assign_cookies)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0459_repeated_substring_pattern)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0461_hamming_distance)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0463_island_perimeter)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0476_number_complement)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0482_license_key_formatting)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0485_max_consecutive_ones)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0492_construct_the_rectangle)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0495_teemo_attacking)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0496_next_greater_element_I)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0500_keyboard_row)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0501_find_mode_in_binary_search_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0504_base_7)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0506_relative_ranks)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0507_perfect_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0509_fibonacci_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0520_detect_capital)
add_subdirectory(${PROJECT_SOURCE_DIR}/q0521_longest_uncommon_subsequence_I)

